# elearning-django-graphene

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  pyproject.toml  requirements.txt  schema.graphql
apps/courses/: inputs.py  models.py  mutation.py  queries.py  schema.py  types.py
apps/quizzes/: apps.py  inputs.py  models.py  mutation.py  queries.py  signals.py  types.py
apps/tutorials/: apps.py  inputs.py  models.py  mutation.py  queries.py  signals.py  tests.py  types.py  urls.py  views.py
apps/users/: enums.py  helper.py  inputs.py  models.py  mutaion.py  mutation.py  queries.py  query.py  schema.py  types.py
config/: schema.py  settings.py  urls.py
rawsql/: queries.sql
